--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,8 @@
 @import 'tailwindcss';
 
 @theme inline {
+  --spacing-8xl: 90rem;
+
   --color-primary: #ff5f3f;
   --color-primary-light: #f4ebeb;
   --color-dark: #111111;
