[FEAT] Header: Implementation responsive layout

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,10 +11,16 @@
   --font-poppins: var(--font-poppins);
 }
 
-html {
-  overflow-x: hidden;
-}
+@layer base {
+  * {
+    @apply font-poppins;
+  }
 
-* {
-  @apply font-poppins;
+  html {
+    overflow-x: hidden;
+  }
+
+  button {
+    cursor: pointer;
+  }
 }
