--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,4 +23,10 @@
   button {
     cursor: pointer;
   }
+
+  input[type='number']::-webkit-outer-spin-button,
+  input[type='number']::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
 }
