[FEAT] Admin Dashboard: Slicing UI CategoriesPage

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,7 +44,7 @@
   }
 
   .input-group-admin label {
-    @apply block mb-1 text-xs;
+    @apply block mb-2 text-xs font-medium;
   }
 
   .input-group-admin input,
